--- a/style.css
+++ b/style.css
@@ -31,13 +31,13 @@ body{
 .user-input{
     margin: 20px auto;
     display: block;
-    width: 100px;
-    height: 60px;
+    width: 70px;
+    height: 40px;
 
     background-color: #6943FF;
     border: 2px solid #B295FF;
     border-radius: 5px;
-    font-size: 40px;
+    font-size: 30px;
     color: white;
     text-align: center;
     font-weight: bold;
@@ -55,11 +55,12 @@ body{
 
 .convert-button{
     padding: 6px 12px;
-    width: 100px;
-    font-size: 16px;
+    width: 70px;
+    font-size: 14px;
     border-radius: 5px;
     border: none;
     background-color: #F4F4F4;
+    margin-bottom: 10px;
 }
 
 .convert-button:hover{
@@ -69,8 +70,6 @@ body{
 
 .section-2{
     margin: 30px 10px;
-
-    /* padding: 10px 5px; */
 }
 
 .section-2 div{
