--- a/style.css
+++ b/style.css
@@ -4,17 +4,19 @@ body{
     justify-content: center;
     align-items: center;
     height: 97vh;
-    background-color: black;
+    background-color: powderblue;
 
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 #unit-convertor{
     background-color: #1F2937;
-    width: 35%;
+    width: 37%;
     text-align: center;
     border-radius: 10px;
     padding: 5px;
+    border: 5px solid white;
+    box-shadow: 0 0 10px 10px #1F2937;
 }
 
 .section-1{
